[package]
name = "sword-socketio-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
sword = { workspace = true, features = ["socketio", "validation-validator"] }
sword-layers = { workspace = true, features = ["helmet", "compression", "cors"] }

tokio = { workspace = true }
tower-http = { workspace = true, features = ["limit", "cors", "trace"] }

serde_json = { workspace = true }
axum-test = { workspace = true }
