[package]
name = "sword-web-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[dependencies]
sword = { workspace = true, features = ["web-controllers", "multipart", "validation-validator"] }
sword-layers = { workspace = true, features = ["helmet", "compression"] }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
validator = { workspace = true }

axum-test = { workspace = true }
tower-http = { workspace = true, features = ["limit", "cors", "trace"] }
